<resources>
    <string name="main">Mobile</string>
    <string name="signUp">Sign up</string>
    <string name="signIn">Sign in</string>
    <string name="startScreen">Start Screen</string>
    <string name="newsItem">News detail</string>
    <string name="news_photo">News photo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hey">Hey!</string>
    <string name="change_email">Change email</string>
    <string name="my_profile">My profile</string>
    <string name="change">Change</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author</string>
    <string name="brief_description">Brief description</string>
    <string name="_01_january_1990">01 January 1990</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>