<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignUp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/signIn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <EditText
        android:id="@+id/emailSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email_bar"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineSignIn"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/password_bar"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/emailSignIn"
        app:layout_constraintStart_toStartOf="@id/emailSignIn"
        app:layout_constraintTop_toBottomOf="@id/emailSignIn"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/ui_spacing_double"
        android:background="@drawable/button"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@id/goToSignUp"
        app:layout_constraintEnd_toEndOf="@id/passwordSignIn"
        app:layout_constraintStart_toStartOf="@id/passwordSignIn"
        app:layout_constraintTop_toBottomOf="@id/passwordSignIn" />

    <TextView
        android:id="@+id/goToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_spacing_double"
        android:text="@string/no_account_yet_create_one"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />
</androidx.constraintlayout.widget.ConstraintLayout>